objects/BMCServiceDesk__Incident_Change_Link__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data linking between incidents and changes.</description>
    <fields>
        <fullName>BMCServiceDesk__FKChange__c</fullName>
        <description>This field stores the foreign key value of the linked change</description>
        <label>Change</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Linked Incidents</relationshipLabel>
        <relationshipName>Incident_Change_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the client reference of the parent incident record when client is a user.</description>
        <inlineHelpText>Stores the client reference of the parent incident record when client is a user.</inlineHelpText>
        <label>Client - User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Link_Client_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the client reference of the parent incident record when client is a contact.</description>
        <inlineHelpText>Stores the client reference of the parent incident record when client is a contact.</inlineHelpText>
        <label>Client - Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incident Change Links</relationshipLabel>
        <relationshipName>Link_Client_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <description>This field stores the foreign key value of the linked incident</description>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Linked Change Requests</relationshipLabel>
        <relationshipName>Incident_Change_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Incident Change Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident Change Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>